--- a/index.html
+++ b/index.html
@@ -33,43 +33,43 @@
   <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
-        <nav class="nav container">
-          <a href="#" class="nav__logo">
-            <img src="assets/img/siriusoya.png" class="nav__logo-circle" />
-            <span class="nav__logo-name">Annisa Lubis</span>
-          </a>
+      <nav class="nav container">
+        <a href="#" class="nav__logo">
+          <img src="assets/img/siriusoya.png" class="nav__logo-circle" />
+          <span class="nav__logo-name">Annisa Lubis</span>
+        </a>
 
-          <div class="nav__menu" id="nav-menu">
-            <h3 class="nav__title"></h3>
+        <div class="nav__menu" id="nav-menu">
+          <h3 class="nav__title"></h3>
 
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="#home" class="nav__link">Home</a>
-              </li>
-              <li class="nav__item">
-                <a href="#about" class="nav__link">About Me</a>
-              </li>
-              <li class="nav__item">
-                <a href="#projects" class="nav__link">Projects</a>
-              </li>
-              <li class="nav__item">
-                <a href="#contact" class="nav__link">Contact Me</a>
-              </li>
-            </ul>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="#about" class="nav__link">About Me</a>
+            </li>
+            <li class="nav__item">
+              <a href="#projects" class="nav__link">Projects</a>
+            </li>
+            <li class="nav__item">
+              <a href="#contact" class="nav__link">Contact Me</a>
+            </li>
+          </ul>
 
-            <!-- Close button -->
-            <div class="nav__close" id="nav-close">
-              <i class="ri-close-line"></i>
-            </div>
+          <!-- Close button -->
+          <div class="nav__close" id="nav-close">
+            <i class="ri-close-line"></i>
           </div>
+        </div>
 
-            <div class="nav__buttons">
-              <!-- Toggle button-->
-              <div class="nav__toggle" id="nav-toggle">
-                <i class="ri-menu-line"></i>
-              </div>
-            </div>
-        </nav>
+        <div class="nav__buttons">
+          <!-- Toggle button-->
+          <div class="nav__toggle" id="nav-toggle">
+            <i class="ri-menu-line"></i>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <!--==================== MAIN ====================-->
@@ -77,31 +77,45 @@
       <!--==================== HOME ====================-->
       <section class="home section" id="home">
         <div class="home__container container grid">
-          <h1 class="home__name">
-            Annisa Lubis
-          </h1>
+          <h1 class="home__name">Annisa Lubis</h1>
 
           <div class="home__perfil">
             <div class="home__image">
-              <img src="assets/img/siriusoya.png" alt="image" class="home__img" />
+              <img
+                src="assets/img/siriusoya.png"
+                alt="image"
+                class="home__img"
+              />
             </div>
 
             <div class="home__social">
-              <a href="https://github.com/siriusoya" target="_blank" class="home__social-link">
+              <a
+                href="https://github.com/siriusoya"
+                target="_blank"
+                class="home__social-link"
+              >
                 <i class="ri-github-fill"></i>
               </a>
-              <a href="https://www.linkedin.com/in/annisa-f-lubis/" target="_blank" class="home__social-link">
+              <a
+                href="https://www.linkedin.com/in/annisa-f-lubis/"
+                target="_blank"
+                class="home__social-link"
+              >
                 <i class="ri-linkedin-box-fill"></i>
               </a>
-              <a href=" https://twitter.com/siriusoya" target="_blank" class="home__social-link">
+              <a
+                href=" https://twitter.com/siriusoya"
+                target="_blank"
+                class="home__social-link"
+              >
                 <i class="ri-twitter-fill"></i>
               </a>
             </div>
           </div>
           <div class="home__info">
             <p class="home__description">
-              <b>Full Stack Developer</b> with MERN stack proficiency. I am actively seeking roles to fuel
-              my growth and learning journey.
+              <b>Full Stack Developer</b> with MERN stack proficiency. I am
+              actively seeking roles to fuel my growth and learning journey.
             </p>
 
             <a href="#about" class="home__scroll">
@@ -116,7 +130,32 @@
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <div class="about__container container grid">
+          <h2 class="section__title-1">About Me</h2>
+
+          <div class="about__perfil">
+            <div class="about__image">
+              <img src="assets/img/nisa.png" alt="" class="about__img" />
+            </div>
+          </div>
+
+          <div class="about__info">
+            <p class="about__description">
+              With a strong passion for problem-solving and keen interest on
+              optimizing user interface experiences, I thrive in dynamic,
+              creative environments and am eager to collaborate with talented
+              professionals on challenging projects.
+            </p>
+
+            
+
+            <div class="about__buttons">
+              <a href="https://drive.google.com/file/d/1D3MT27Kl6RHVx-gNlzV5kfD4tfHV3K5l/view?usp=sharing" class="button">Check My Resume</a>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== SERVICES ====================-->
       <section class="services section"></section>
