--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
         <div class="about__container container grid">
-          <h2 class="section__title-1">About Me</h2>
+          <h2 class="section__title-1">
+            <span>About Me</span>
+          </h2>
 
           <div class="about__perfil">
             <div class="about__image">
@@ -148,20 +150,81 @@
               professionals on challenging projects.
             </p>
 
-            
-
             <div class="about__buttons">
-              <a href="https://drive.google.com/file/d/1D3MT27Kl6RHVx-gNlzV5kfD4tfHV3K5l/view?usp=sharing" class="button">Check My Resume</a>
+              <a
+                href="https://drive.google.com/file/d/1D3MT27Kl6RHVx-gNlzV5kfD4tfHV3K5l/view?usp=sharing"
+                class="button"
+                >Check My Resume</a
+              >
             </div>
           </div>
         </div>
       </section>
 
       <!--==================== SERVICES ====================-->
-      <section class="services section"></section>
+      <section class="services section">
+        <h2 class="section__title-2">
+          <span>Tech Stack</span>
+        </h2>
+
+        <div class="services__container container grid">
+          <article class="services__card">
+            <div class="services__border"></div>
+
+            <div class="services__content">
+              <div class="services__icon">
+                <div class="services__box"></div>
+                <i class="ri-terminal-window-line"></i>
+              </div>
+
+              <h2 class="services__title">Language</h2>
+
+              <p class="services__description">JavaScript, TypeScript</p>
+            </div>
+          </article>
+
+          <article class="services__card">
+            <div class="services__border"></div>
+
+            <div class="services__content">
+              <div class="services__icon">
+                <div class="services__box"></div>
+                <i class="ri-code-box-line"></i>
+              </div>
+
+              <h2 class="services__title">Front End</h2>
+
+              <p class="services__description">
+                React JS, Next JS, Redux, Vue, Pinia, React Native, HTML & CSS,
+                Apollo Client
+              </p>
+            </div>
+          </article>
+
+          <article class="services__card">
+            <div class="services__border"></div>
+
+            <div class="services__content">
+              <div class="services__icon">
+                <div class="services__box"></div>
+                <i class="ri-terminal-box-line"></i>
+              </div>
+
+              <h2 class="services__title">Back End</h2>
+
+              <p class="services__description">
+                Node JS, Express, Sequelize, PostgreSQL, GraphQL, Apollo Server,
+                MongoDB, Redis, Rest API
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
 
       <!--==================== PROJECTS ====================-->
-      <section class="projects section" id="projects"></section>
+      <section class="projects section" id="projects">
+        
+      </section>
 
       <!--==================== CONTACT ====================-->
       <section class="contact section" id="contact"></section>
