--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap" rel="stylesheet">
     <title>Annisa Lubis</title>
   </head>
   <body>
@@ -77,7 +73,9 @@
       <!--==================== HOME ====================-->
       <section class="home section" id="home">
         <div class="home__container container grid">
-          <h1 class="home__name">Annisa Lubis</h1>
+          <div class="home__name-container">
+          <h1 class="home__name">Annisa &nbsp; Lubis</h1>
+          </div>
 
           <div class="home__perfil">
             <div class="home__image">
@@ -223,7 +221,7 @@
 
       <!--==================== PROJECTS ====================-->
       <section class="projects section" id="projects">
-        
+
       </section>
 
       <!--==================== CONTACT ====================-->
