--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Annisa Lubis</title>
   </head>
   <body>
@@ -74,7 +77,7 @@
       <section class="home section" id="home">
         <div class="home__container container grid">
           <div class="home__name-container">
-          <h1 class="home__name">Annisa &nbsp; Lubis</h1>
+            <h1 class="home__name">Annisa &nbsp; Lubis</h1>
           </div>
 
           <div class="home__perfil">
@@ -221,7 +224,183 @@
 
       <!--==================== PROJECTS ====================-->
       <section class="projects section" id="projects">
+        <h2 class="section__title-1">
+          <span>Projects</span>
+        </h2>
 
+        <div class="projects__container container grid">
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/membership-checkout.png"
+                alt=""
+                class="projects__img"
+              />
+
+              <a href="" class="projects__button button">
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle"></h3>
+              <h2 class="projects__title"></h2>
+
+              <p class="projects__description">
+                A serverless and responsive website to fill out a form for
+                membership subscription. It includes form handling with
+                react-hook-form and utilizes styled components for custom
+                styling.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="https://github.com/siriusoya/membership-checkout"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-github-line"></i>
+              </a>
+              <a
+                href="https://membership-checkout.web.app/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+          </article>
+
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/bukukita.png"
+                alt=""
+                class="projects__img"
+              />
+
+              <a href="" class="projects__button button">
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle"></h3>
+              <h2 class="projects__title"></h2>
+
+              <p class="projects__description">
+                A website enabling users to donate and receive secondhand books.
+                Users can upload details of the books they wish to donate,
+                request books listed on the platform from other users, and
+                select the recipient based on the messages they receive.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="https://github.com/siriusoya/membership-checkout"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-github-line"></i>
+              </a>
+              <a
+                href="https://membership-checkout.web.app/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+          </article>
+
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/sakurakoi.png"
+                alt=""
+                class="projects__img"
+              />
+
+              <a href="" class="projects__button button">
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle"></h3>
+              <h2 class="projects__title"></h2>
+
+              <p class="projects__description">
+                A website to showcase products from a popular art tools brand,
+                using the brand's design and products as references. It includes
+                a content management system where administrators can add, edit,
+                and delete products.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="https://github.com/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-github-line"></i>
+              </a>
+              <a
+                href="https://membership-checkout.web.app/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+          </article>
+
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/flashnews.png"
+                alt=""
+                class="projects__img"
+              />
+
+              <a href="" class="projects__button button">
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle"></h3>
+              <h2 class="projects__title"></h2>
+
+              <p class="projects__description">
+                A website to showcase mock news articles, complete with a
+                content management system that allows administrators to add,
+                edit, and soft-delete articles by altering their activity
+                status. Additionally, users are able to bookmark news articles.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="https://github.com/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-github-line"></i>
+              </a>
+              <a
+                href="https://membership-checkout.web.app/"
+                target="_blank"
+                class="projects__link"
+              >
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+          </article>
+        </div>
       </section>
 
       <!--==================== CONTACT ====================-->
