--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
       </section>
 
       <!--==================== SERVICES ====================-->
-      <section class="services section">
+      <section class="services section" id="services">
         <h2 class="section__title-2">
-          <span>Tech Stack</span>
+          <span>Tech Stacks</span>
         </h2>
 
         <div class="services__container container grid">
@@ -236,15 +236,12 @@
                 alt=""
                 class="projects__img"
               />
-
-              <a href="" class="projects__button button">
-                <i class="ri-arrow-right-up-line"></i>
-              </a>
             </div>
 
             <div class="projects__content">
-              <h3 class="projects__subtitle"></h3>
-              <h2 class="projects__title"></h2>
+              <h2 class="projects__title">RetroFuture</h2>
+
+              <h3 class="projects__subtitle">ReactJS, CSS, Javascript</h3>
 
               <p class="projects__description">
                 A serverless and responsive website to fill out a form for
@@ -252,6 +249,8 @@
                 react-hook-form and utilizes styled components for custom
                 styling.
               </p>
+
+              
             </div>
 
             <div class="projects__buttons">
@@ -260,34 +259,31 @@
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-github-line"></i>
+                <i class="ri-github-line"></i> View
               </a>
               <a
                 href="https://membership-checkout.web.app/"
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-arrow-right-up-line"></i> View
               </a>
             </div>
           </article>
 
           <article class="projects__card">
+            <h2 class="projects__title">BukuKita</h2>
             <div class="projects__image">
               <img
                 src="assets/img/bukukita.png"
                 alt=""
                 class="projects__img"
               />
-
-              <a href="" class="projects__button button">
-                <i class="ri-arrow-right-up-line"></i>
-              </a>
             </div>
 
             <div class="projects__content">
-              <h3 class="projects__subtitle"></h3>
-              <h2 class="projects__title"></h2>
+              
+              <h3 class="projects__subtitle">VueJS, Express.js, Node.js, PostgreSQL, AWS, 3rd party API</h3>
 
               <p class="projects__description">
                 A website enabling users to donate and receive secondhand books.
@@ -303,14 +299,14 @@
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-github-line"></i>
+                <i class="ri-github-line"></i> View
               </a>
               <a
                 href="https://membership-checkout.web.app/"
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-arrow-right-up-line"></i> View
               </a>
             </div>
           </article>
@@ -322,15 +318,11 @@
                 alt=""
                 class="projects__img"
               />
-
-              <a href="" class="projects__button button">
-                <i class="ri-arrow-right-up-line"></i>
-              </a>
             </div>
 
             <div class="projects__content">
               <h3 class="projects__subtitle"></h3>
-              <h2 class="projects__title"></h2>
+              <h2 class="projects__title">SakuraKoi</h2>
 
               <p class="projects__description">
                 A website to showcase products from a popular art tools brand,
@@ -346,14 +338,14 @@
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-github-line"></i>
+                <i class="ri-github-line"></i> View
               </a>
               <a
                 href="https://membership-checkout.web.app/"
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-arrow-right-up-line"></i> View
               </a>
             </div>
           </article>
@@ -365,15 +357,11 @@
                 alt=""
                 class="projects__img"
               />
-
-              <a href="" class="projects__button button">
-                <i class="ri-arrow-right-up-line"></i>
-              </a>
             </div>
 
             <div class="projects__content">
               <h3 class="projects__subtitle"></h3>
-              <h2 class="projects__title"></h2>
+              <h2 class="projects__title">FlashNews</h2>
 
               <p class="projects__description">
                 A website to showcase mock news articles, complete with a
@@ -389,14 +377,14 @@
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-github-line"></i>
+                <i class="ri-github-line"></i> View
               </a>
               <a
                 href="https://membership-checkout.web.app/"
                 target="_blank"
                 class="projects__link"
               >
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-arrow-right-up-line"></i> View
               </a>
             </div>
           </article>
@@ -404,11 +392,35 @@
       </section>
 
       <!--==================== CONTACT ====================-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <div class="contact__container grid">
+          <div class="contact__data">
+
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__container grid">
+        <ul class="footer__links">
+          <li>
+            <a href="#about" class="footer__link">About</a>
+          </li>
+          <li>
+            <a href="#services" class="footer__link">Tech Stacks</a>
+          </li>
+          <li>
+            <a href="#projects" class="footer__link">Projects</a>
+          </li>
+        </ul>
+
+        <span class="footer__copy">
+          &#169; All Rights Reserved By <a href="https://annisa-lubis.vercel.app">Annisa Lubis</a>
+        </span>
+      </div>
+    </footer>
 
     <!--========== SCROLL UP ==========-->
 
