done ver 1 rev 1

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
           <div class="home__info">
             <p class="home__description">
-              <b>Full Stack Developer</b> with MERN stack proficiency. I am
+              <b>Full Stack Developer</b> skilled in the MERN stack. I am
               actively seeking roles to fuel my growth and learning journey.
             </p>
 
@@ -153,7 +153,7 @@
 
             <div class="about__buttons">
               <a
-                href="https://drive.google.com/file/d/1D3MT27Kl6RHVx-gNlzV5kfD4tfHV3K5l/view?usp=sharing"
+                href="https://drive.google.com/file/d/1GxLGiRe-2UKNTCbOEBLU-yo9rUjfHtPL/view?usp=sharing"
                 class="button"
                 target="_blank"
                 >Check My Resume</a
